// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: если есть кол-во, вернет правильный результат 1`] = `
Object {
  "key": "10 владельцев в ПТС",
}
`;

exports[`отчет: status === OK: если есть кол-во, вернет правильный результат 1`] = `
Object {
  "key": "Владельцы по ПТС",
  "value": "10 владельцев",
}
`;

exports[`отчет: status === OK: если нет кол-ва, вернет флаг для удаления данных 1`] = `
Object {
  "field": "pts_owners",
  "status": "REMOVE",
}
`;

exports[`отчет: status === UNKNOWN: если владельцев в объявлении нет, вернет правильный результат 1`] = `
Object {
  "key": "Владельцы по ПТС",
  "value": "",
}
`;

exports[`отчет: status === UNKNOWN: если есть владельцы в объявлении и их кол-во не совпадает с записями, вернет правильный результат 1`] = `
Object {
  "key": "Владельцы по ПТС",
  "value": "В ПТС 10 владельцев (в объявлении — 3)",
}
`;

exports[`отчет: status === UNKNOWN: нет объявления, вернет флаг для удаления данных 1`] = `
Object {
  "field": "pts_owners",
  "status": "REMOVE",
}
`;
